k8s-config/services/overlays/production/istio/blue-green/version-mapping/old_new_subsets_destination_rules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: product-composite-dr
spec:
  host: product-composite
  subsets:
  - name: old
    labels:
      version: v2
  - name: new
    labels:
      version: v3
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: auth-server-dr
spec:
  host: auth-server
  subsets:
  - name: old
    labels:
      version: v2
  - name: new
    labels:
      version: v3
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: product-dr
spec:
  host: product
  subsets:
  - name: old
    labels:
      version: v2
  - name: new
    labels:
      version: v3
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: recommendation-dr
spec:
  host: recommendation
  subsets:
  - name: old
    labels:
      version: v2
  - name: new
    labels:
      version: v3
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: review-dr
spec:
  host: review
  subsets:
  - name: old
    labels:
      version: v2
  - name: new
    labels:
      version: v3
